--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-# akazure.github.io
-个人网站
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	<h1>hello github pages</h1>
+</body>
+</html>
